Some page preview

--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+
+  <!-- fb & Whatsapp -->
+
+  <!-- Site Name, Title, and Description to be displayed -->
+  <meta property="og:site_name" content="Psicologa Carolina Diaz Riffo">
+  <meta property="og:title" content="Psicologa Carolina Diaz Riffo">
+  <meta property="og:description" content="En construcción...">
+
+  <!-- Image to display -->
+  <!-- Replace   «example.com/image01.jpg» with your own -->
+  <meta property="og:image" content="/favicon-32x32.png">
+
+  <!-- No need to change anything here -->
+  <meta property="og:type" content="website" />
+  <meta property="og:image:type" content="image/jpeg">
+
+  <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
+  <meta property="og:image:width" content="300">
+  <meta property="og:image:height" content="300">
+
+  <!-- Website to visit when clicked in fb or WhatsApp-->
+  <meta property="og:url" content="https://psicocaro.com">
 </head>
 
 
