--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
       <div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20">
         <div class="max-w-md mx-auto">
           <div>
-            <img src="img/lilo-and-stitch-psychologist.gif" />
+            <img src="img/lilo-and-stitch-psychologist.gif" title="Estamos terapeando para usted" />
           </div>
           <div class="divide-y divide-gray-200">
             <div class="py-8 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
-              <p>Estamos terapeando para usted</p>
-            </div>
-            <div class="pt-6 text-base leading-6 font-bold sm:text-lg sm:leading-7">
               <p>Pronto...</p>
+            </div>
+            <div class="pt-6 text-base leading-6 sm:text-lg sm:leading-7">
+              Mayor información en <a href="mailto:hola@psicocaro.com"
+                class="font-bold">hola@psicocaro.com</a>
             </div>
           </div>
         </div>
