Updating logo image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Image to display -->
   <!-- Replace   «example.com/image01.jpg» with your own -->
-  <meta property="og:image" content="https://psicocaro.com/favicon-32x32.png">
+  <meta property="og:image" content="https://psicocaro.com/apple-touch-icon.png">
 
   <!-- No need to change anything here -->
   <meta property="og:type" content="website" />
@@ -49,7 +49,7 @@
       <div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20">
         <div class="max-w-md mx-auto">
           <div>
-            <img src="img/lilo-and-stitch-psychologist.gif" title="Estamos terapeando para usted" />
+            <img src="img/logo-with-text.svg" title="Estamos terapeando para usted" style="margin: auto;" />
           </div>
           <div class="divide-y divide-gray-200">
             <div class="py-8 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
