--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 
   <!-- Website to visit when clicked in fb or WhatsApp-->
   <meta property="og:url" content="https://psicocaro.com">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VFPPMGELBW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VFPPMGELBW');
+  </script>
 </head>
 
 
